 * Removed example/decode_mpeg.c, it has been superseeded by dvbinfo example application.
 * New descriptors:
   - 0x1d MPEG IOD descriptor
   - 0x1e MPEG SL descriptor
   - 0x1f MPEG FMC descriptor
   - 0x20 MPEG External_ES_ID descriptor
   - 0x23 MPEG MultiplexBuffer descriptor
   - 0x24 Content labelling descriptor
   - 0x67 DVB Transport Stream descriptor
 * Fix bugs in descriptors: 0x41, 0x44, 0x4a, 0x4b, 0x53, 0x54, 0x55, 0x56, 0x59, 0xa0
 * Fix bugs in table: CA, EIT, NIT
 * Work on SIS table and splice commands.
 * More descriptor tests
 * Documentation:
   - spelling fixes

Changes between 1.2.0 and 1.3.0:
--------------------------------

 * New descriptor:
   - 0x10 Smoothing Buffer
   - 0x11 STD descriptor
   - 0x12 IBP descriptor
   - 0x1b MPEG-4 video descriptor
   - 0x1c MPEG-4 audio descriptor
 * Fix bugs in descriptor: 0x02, 0x0a, 0x45, 0x48, 0x50, 0x56, 0x7c
 * Fix bugs in table: EIT, NIT
 * Fix bugs in demux.c
 * Build with mingw32
 * Generate descriptors: 0x83, 0xa1
 * Documentation fixes:
   - tables: NIT
   - descriptors: 0xa1

Changes between 1.1.2 and 1.2.0:
--------------------------------

 * Rename define  DVDPSI_GetContentCategoryFromType() to DVBPSI_GetContentCategoryFromType()
   - the prefix said DVD, should have been DVB instead
 * Added new descriptors:
   - 0xa1 Service location
   - 0x4c Time shifted service
   - 0x53 CA system id
   - 0x81 AC3 audio
   - 0x86 Caption service
 * Fixed Coverity Scan issues
   - out-of-bound writes
   - null pointer dereferences
   - resource leaks
   - check return values

Changes between 1.1.1 and 1.1.2:
--------------------------------

 * Various bugfixes for ATSC PSI tables
 * dvbpsi_packet_push() bugfix
 * Various bugfixes for dvbinfo
 * Ignore invalid program pids (pid=0) inside PAT table (closes vlc ticket #9695)

Changes between 1.1.0 and 1.1.1:
--------------------------------

 * Various bugfixes (documentation, dvbinfo)